<resources>
    <string name="app_name">Danish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="content_description_media">Product Image</string>
    <string name="image_status">Image Status</string>
    <string name="product1">Product1</string>
    <string name="price">جملة</string>
    <string name="price2">مفرق</string>
    <string name="cost"> شراء</string>
    <string name="quantity">الكمية</string>
    <string name="desc">danish service.</string>
    <string name="fab_content_description">1</string>
    <string name="product_name_req">اسم المنتج  <font color='#FF0000'>*</font></string>
    <string name="supplier">اسم التاجر</string>
    <string name="item_price_req">سعر المفرق  </string>
    <string name="currency_symbol">$</string>
    <string name="quantity_req">"اسم المستودع   "</string>
    <string name="quantity2_req">"الكمية في المستودع  "</string>
    <string name="save_action">حفظ</string>
    <string name="add_new_item">إضافة منتج جديد</string>
    <string name="add_fragment_title">إضافة منتج جديد</string>
    <string name="item">مقياس شيزر</string>
    <string name="item_desc">فولط مع نسبة شحن \n العنوان : القامشلي - شارع الوحدة</string>
    <string name="delete">حذف</string>
    <string name="edit_item">تعديل مادة</string>
    <string name="sell">بيع</string>
    <string name="products">قائمة المواد</string>
    <string name="add">إضافة مادة جديدة</string>
    <string name="quantity1">الكمية</string>
    <string name="wholesale">بيع جملة؟</string>
    <string name="sold_quantity1">الكمية المباعة  </string>
    <string name="sold_quantity2">الكمية المباعة من المستودع 2</string>
    <string name="item_cost_req">سعر الشراء</string>
    <string name="item_wholesale_req">سعر الجملة</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="signin">تسجيل دخول</string>
    <string name="delete_question">هل انت متأكد انك تريد حذف المنتج نهائيا؟</string>
    <string name="no">لا</string>
    <string name="yes">نعم</string>
    <string name="edit_product_fragment">تعديل منتج</string>
    <string name="search">search</string>
    <string name="add_user">إضافة مستخدم</string>
    <string name="edit">تعديل</string>
    <string name="err">خطأ</string>
    <string name="err_msg">اسم المستخدم أو كلمة السر غير صحيحة</string>
    <string name="product_detail">تفاصيل المنتج</string>
    <string name="accept">موافق</string>
    <string name="empty_msg">يجب ادخال اسم المستخدم وكلمة السر</string>
    <string name="name">الاسم</string>
    <string name="add_new_user">تسجيل</string>
    <string name="search_hint">ابحث عن منتج</string>
    <string name="is_admin">حساب مدير؟</string>
    <string name="logout">تسجيل خروج</string>
    <string name="preference_file_key">com.hameed.danish.PREFERENCE_FILE_KEY</string>
    <string name="savedUsername">savedUserName</string>
    <string name="savedPassword">savedPassword</string>
    <string name="savedName">savedName</string>
    <string name="savedIsAdmin">savedIsAdmin</string>
    <string name="descreption">وصف المنتج</string>
    <string name="timeout_msg">يرجى التأكد من اتصالك بالانترنت</string>
    <string name="manage_user">إدارة المستخدمين</string>
    <string name="update">تعديل</string>
    <string name="edit_user">تعديل مستخدم</string>
    <string name="orders">المبيعات</string>
    <string name="change_password">تغيير كلمة السر</string>
    <string name="user_id">id</string>
    <string name="product_image">product image</string>
    <string name="pwd_changred">تم تغيير كلمة السر بنجاح</string>
    <string name="user_updated">تم التعديل بنجاح</string>
    <string name="user_added">تمت الإضافة بنجاح</string>
    <string name="product_updated">تم تعديل المنتج بنجاح</string>
    <string name="product_added">تم إضافة المنتج بنجاح</string>
    <string name="product_deleted">تم الحذف بنجاح</string>
    <string name="choose">إضغط لاضافة صورة</string>
</resources>