<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddProductFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="@+id/product_image"
        app:layout_constraintEnd_toEndOf="@+id/product_image"
        app:layout_constraintStart_toStartOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description_media"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/product_name_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete|textCapWords"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_desc_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/descreption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete|textCapWords"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_supplier_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/supplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_desc_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete|textCapWords"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_cost_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/item_cost_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_supplier_label"
        app:prefixText="@string/currency_symbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_cost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_price_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/item_price_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_wholesale_label"
        app:prefixText="@string/currency_symbol">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_wholesale_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/item_wholesale_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_cost_label"
        app:prefixText="@string/currency_symbol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_wholesale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_count_2_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/quantity2_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_count_1_label"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/item_count_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="number"
        android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_count_1_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/quantity_req"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_price_label"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_count_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/save_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_count_2_label"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>