<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/listProductsFragment"
        android:name="com.hameed.danish.ui.ListProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_list_products" >
        <action
            android:id="@+id/action_listProductsFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_listProductsFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_listProductsFragment_to_ordersFragment"
            app:destination="@id/ordersFragment" />
        <action
            android:id="@+id/action_listProductsFragment_to_addUserFragment"
            app:destination="@id/addUserFragment" />
        <action
            android:id="@+id/action_listProductsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_listProductsFragment_to_userManageFragment"
            app:destination="@id/userManageFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.hameed.danish.ui.AddProductFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_product" >
        <argument
            android:name="title"
            app:argType="string" />
        <action
            android:id="@+id/action_addProductFragment_to_listProductsFragment"
            app:destination="@id/listProductsFragment" />
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.hameed.danish.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail" >
        <action
            android:id="@+id/action_productDetailFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_productDetailFragment_to_listProductsFragment"
            app:destination="@id/listProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.hameed.danish.LoginFragment"
        android:label="تسجيل دخول"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_listProductsFragment"
            app:destination="@id/listProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addUserFragment"
        android:name="com.hameed.danish.AddUserFragment"
        android:label="إضافة مستخدم"
        tools:layout="@layout/fragment_add_user" >
        <action
            android:id="@+id/action_addUserFragment_to_listProductsFragment"
            app:destination="@id/listProductsFragment" />
        <argument
            android:name="uid"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="إضافة مستخدم" />
        <action
            android:id="@+id/action_addUserFragment_to_userManageFragment"
            app:destination="@id/userManageFragment"
            app:popUpTo="@id/userManageFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.hameed.danish.OrdersFragment"
        android:label="المبيعات"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/userManageFragment"

        android:name="com.hameed.danish.UserManageFragment"
        android:label="إدارة المستخدمين" >
        <action
            android:id="@+id/action_userManageFragment_to_addUserFragment"
            app:destination="@id/addUserFragment" />
    </fragment>
</navigation>