<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="viewmodel"
    type="com.hameed.danish.viewmodels.OverviewViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        tools:context=".ProductDetailFragment">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="8dp">

                <TextView
                    android:layoutDirection="rtl"
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:layoutDirection="rtl"
                    android:id="@+id/supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/red_700"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:id="@+id/item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_name"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_description"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/red_700"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:padding="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_quantity"
                    android:layout_toEndOf="@id/item_wholeprice"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@color/design_default_color_primary"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/yellow_700"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/item_wholeprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_quantity"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/item_cost"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@color/design_default_color_primary"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/yellow_700"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/item_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_quantity"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@color/yellow_700"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/design_default_color_primary"
                    android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sold_item_1_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/item_price"
                    android:hint="@string/sold_quantity1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sold_item_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/sell_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sell"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/sold_item_1_label"
                     />
                <Button
                    android:id="@+id/delete_item"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/sell_item"
                     />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/edit_item"
            android:src="@drawable/ic_edit"
            app:tint="@android:color/white" />
    </RelativeLayout>
</layout>